--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
     color: #365486!important;
 }
 .me{
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
+    height: 230px;
+    width: 230px;
+    border-radius: 10px;
 }
 li{
     list-style: georgian outside;
