--- a/style.css
+++ b/style.css
@@ -76,12 +76,12 @@ li{
 }
 @keyframes slide{
     from {
-      translate:0 150vw;
-      scale: 100% 1;
+        transform: translate(0, 150vw);
+        scale: 100% 1;
     }
     to {
-      translate: 0 0;
-      scale: 100% 1;
+        transform: translate(0, 0);
+        scale: 100% 1;
     }
 }
 
